ea timeline excerpt alignment issue fixing

--- a/assets/front-end/css/view/view.css
+++ b/assets/front-end/css/view/view.css
@@ -6954,6 +6954,7 @@ button.mfp-arrow:not(.toggle) {
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
